exo post-it en cour

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,8 +1,4 @@
-#commentaires{
 
-
-    
-}
 @import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 
 * { box-sizing:border-box; }
@@ -31,7 +27,7 @@ body { background:url(https://subtlepatterns.com/patterns/little_pluses.png) #ca
 
 #create:hover { border-color:rgba(0,0,0,0.2); color:rgba(0,0,0,0.2); }
 
-textarea {
+.textarea {
   font:20px 'Gloria Hallelujah', cursive; 
   line-height:1.5;
   border:0;
@@ -40,10 +36,10 @@ textarea {
   box-shadow:0 4px 6px rgba(0,0,0,0.1);
   overflow:hidden;
   transition:box-shadow 0.5s ease;
-  font-smoothing:subpixel-antialiased;
+  /* font-smoothing:subpixel-antialiased; */
   max-width:520px;
   max-height:250px;
   resize: none;
 }
-textarea:hover { box-shadow:0 5px 8px rgba(0,0,0,0.15); }
-textarea:focus { box-shadow:0 5px 12px rgba(0,0,0,0.2); outline:none; }
+.textarea:hover { box-shadow:0 5px 8px rgba(0, 0, 0, 0.527); }
+.textarea:focus { box-shadow:0 5px 12px rgba(0,0,0,0.2); outline:none; }
